--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "lint-format": "npm run lint && npm run format"
   },
   "jest": {
     "preset": "jest-expo"
@@ -28,6 +31,8 @@
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
+    "expo-localization": "~16.0.1",
+    "expo-notifications": "~0.29.14",
     "expo-router": "~4.0.19",
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.22",
@@ -52,9 +57,7 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "sentry-expo": "~7.0.0",
-    "zustand": "^5.0.3",
-    "expo-localization": "~16.0.1",
-    "expo-notifications": "~0.29.14"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -63,8 +66,11 @@
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "detox": "^20.35.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "jest": "^29.7.0",
     "jest-expo": "~52.0.6",
+    "prettier": "^3.2.5",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
